katalog/dual-nginx/deployment-internal.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-ingress-internal
spec:
  selector:
    matchLabels:
      app: ingress
      type: internal
  template:
    metadata:
      labels:
        app: ingress
        type: internal
    spec:
      serviceAccountName: nginx-ingress-serviceaccount
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.26.1
          args:
            - /nginx-ingress-controller
            - --configmap=$(POD_NAMESPACE)/nginx-internal
            - --publish-service=$(POD_NAMESPACE)/ingress-internal
            - --annotations-prefix=nginx.ingress.kubernetes.io
            - --ingress-class=internal
            - --http-port=8080
            - --https-port=8443
          securityContext:
            capabilities:
                drop:
                - ALL
                add:
                - NET_BIND_SERVICE
            runAsUser: 33
            runAsNonRoot: true
          ports:
          - name: http
            containerPort: 8080
          - name: https
            containerPort: 8443
          - name: metrics
            containerPort: 10254
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
---
kind: Service
apiVersion: v1
metadata:
  name: ingress-internal
  labels:
    app: ingress
    type: internal
spec:
  externalTrafficPolicy: Local
  type: NodePort
  selector:
    app: ingress
    type: internal
  ports:
  - name: http
    port: 80
    nodePort: 32080
    targetPort: http
  - name: https
    port: 443
    nodePort: 32443
    targetPort: https
