katalog/dual-nginx/sm.yml
kind: Service
apiVersion: v1
metadata:
  name: ingress-nginx-metrics
  labels:
    app: ingress-nginx
spec:
  selector:
    app: ingress
  ports:
  - name: metrics
    port: 10254
    targetPort: metrics
