katalog/dual-nginx/default-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default-internal
  annotations:
    kubernetes.io/ingress.class: internal
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default-external
  annotations:
    kubernetes.io/ingress.class: external
